--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <meta charset="utf-8">
-    <title>Load data from an external GeoJSON file</title>
+    <title>Vintage Store List</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
@@ -20,7 +20,7 @@
             align-items: stretch;
         }
 
-        #table {
+        #side-panel {
             flex-basis: 500px;
             overflow-y: scroll;
         }
@@ -32,6 +32,7 @@
         button {
             margin-bottom: 10px;
         }
+
         table {
             border-collapse: collapse;
             border-spacing: 0;
@@ -53,17 +54,16 @@
 
 <body>
     <main id="container">
-        <div id="table">
+        <div id="side-panel">
 
-            <h2>Earthquake List</h2>
-            <button onclick="sortTable()">Sort by Magnitude</button>
-            
+            <h2>Vintage Store List</h2>
+            <button>Sort by Rate</button>
 
             <table>
                 <tr>
-                    <th>id</th>
-                    <th>magnitude</th>
-                    <th>timestamp</th>
+                    <th>Store Name</th>
+                    <th>Google Rate</th>
+                    <th>Phone</th>
                 </tr>
             </table>
 
@@ -73,71 +73,50 @@
     </main>
     <script>
         mapboxgl.accessToken =
-            'pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw';
+            'pk.eyJ1Ijoid2VpbGl3MiIsImEiOiJjbGEyeXgyMHIwMGl2M3Ztem16NmZwZTQ5In0.iPuCKVEXHOPSRyooaiocXQ';
         const map = new mapboxgl.Map({
             container: 'map', // container ID
-            style: 'mapbox://styles/mapbox/satellite-v9', // style URL
-            zoom: 5.5, // starting zoom
-            center: [138.043, 38] // starting center
+            style: 'mapbox://styles/weiliw2/claga4xps002015qo8tsf6rfz', // style URL
+            zoom: 9.4, // starting zoom
+            center: [-122.3338, 47.6177] // starting center
         });
+
 
 
         async function geojsonFetch() {
 
+            let response, vintagespot, Seattle, table;
+            response = await fetch('assets/vintagespot.geojson');
+            vintagespot = await response.json();
+            response = await fetch('assets/Seattle.json');
+            Seattle = await response.json();
 
-            let response = await fetch('assets/earthquakes.geojson');
-
-            if (!response.ok) {
-                throw new Error(`HTTP error! status: ${response.status}`);
-            }
-
-            let earthquakes = await response.json();
-
-
-            response = await fetch('assets/japan.json');
-
-            if (!response.ok) {
-                throw new Error(`HTTP error! status: ${response.status}`);
-            }
-
-            let japan = await response.json();
-
-
-            var table = document.getElementsByTagName("table");
-            for (let i = 0; i < earthquakes.features.length; i++) {
-                // console.log(earthquakes.features[i].properties.id);
-
-                var lng = await earthquakes.features[i].geometry.coordinates[0];
-                var lat = await earthquakes.features[i].geometry.coordinates[1];
-
+            table = document.getElementsByTagName("table")[0];
+            let row, cell1, cell2, cell3;
+            for (let i = 0; i < vintagespot.features.length; i++) {
                 // Create an empty <tr> element and add it to the 1st position of the table:
-                var row = table[0].insertRow(-1);
-
-                var cell1 = row.insertCell(0);
-                var cell2 = row.insertCell(1);
-                var cell3 = row.insertCell(2);
-                cell1.innerHTML = await earthquakes.features[i].properties.id;
-                cell2.innerHTML = await earthquakes.features[i].properties.mag;
-                cell3.innerHTML = await new Date(earthquakes.features[i].properties.time).toLocaleDateString("en-US");
-
+                row = table.insertRow(-1);
+                cell1 = row.insertCell(0);
+                cell2 = row.insertCell(1);
+                cell3 = row.insertCell(2);
+                cell1.innerHTML = vintagespot.features[i].properties.Storename;
+                cell2.innerHTML = vintagespot.features[i].properties.Googlerate;
+                cell3.innerHTML = vintagespot.features[i].properties.Phone;
             }
 
 
+            //load data to the map as new layers and table on the side.
+            map.on('load', function loadingData() {
 
-
-            map.on('load', () => {
-
-
-
-                map.addSource('earthquakes', {
+                map.addSource('vintagespot', {
                     type: 'geojson',
-                    data: earthquakes
+                    data: vintagespot
                 });
 
                 map.addLayer({
-                    'id': 'earthquakes-layer',
+                    'id': 'vintagespot-layer',
                     'type': 'circle',
-                    'source': 'earthquakes',
+                    'source': 'vintagespot',
                     'paint': {
                         'circle-radius': 8,
                         'circle-stroke-width': 2,
@@ -147,42 +126,34 @@
                 });
 
 
-                map.addSource('japan', {
+                map.addSource('Seattle', {
                     type: 'geojson',
-                    data: japan
+                    data: Seattle
                 });
 
                 map.addLayer({
-                    'id': 'japan-layer',
+                    'id': 'Seattle-layer',
                     'type': 'fill',
-                    'source': 'japan',
+                    'source': 'Seattle',
                     'paint': {
                         'fill-color': '#0080ff', // blue color fill
                         'fill-opacity': 0.5
                     }
                 });
 
-
-
-
-
-
             });
-
-
-
 
         }
 
-        geojsonFetch()
-            .catch(e => {
-                console.log('There has been a problem with your fetch operation: ' + e.message);
-            });
+        geojsonFetch();
 
+        let btn = document.getElementsByTagName("button")[0];
 
+        btn.addEventListener('click', sortTable);
 
-        function sortTable() {
-            var table, rows, switching, i, x, y, shouldSwitch;
+        // define the function to sort table
+        function sortTable(e) {
+            let table, rows, switching, i, x, y, shouldSwitch;
             table = document.getElementsByTagName("table")[0];
             switching = true;
             /*Make a loop that will continue until
